handson/handson-helm-04/sandwich-app/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-knife-service
spec:
  selector:
    app: app-knife
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-butter-service
spec:
  selector:
    app: app-butter
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
