handson/handson-helm-04/sandwich-app/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trainging-app-ingress
spec:
  rules:
  - host:  <ADD QUOTED VARIABLE HERE>
    http:
      paths:
      - backend:
          serviceName: app-butter-service
          servicePort: 8080
        path: /butter/
      - backend:
          serviceName: app-knife-service
          servicePort: 8080
        path: /knife/
